remove commented code

--- a/index.html
+++ b/index.html
@@ -45,16 +45,7 @@
                     </div>
 
                     <div class="form_wraper" data-form-type="formoid" style="text-align: center;">
-                            <!-- <div data-form-alert="true">
-                                <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
-                            </div> -->
-                            <!-- <form class="mbr-form" action="" method="post" data-form-title="OUR ">
-                                <input type="hidden" value="7X2XrzVGyOg3hkfytMypisY8oISifJqbdWhXmuJzKzlkj/ahB8n7NTFxLtUhA2uPeycVjGj5rVKw3EeonEUSdW+YtrJxNLOhDAoVPDx/f6k5F+ouMOm+DoykKKmMMSQn" data-form-email="true"> -->
-                                <!-- <div class="mbr-subscribe mbr-subscribe-dark input-group"> -->
-                                   <!-- <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email"> -->
-                                   <!-- <span class="input-group-btn"> --><button type="submit" style="border: 1px solid white;margin-right: 0px;" class="btn btn-primary">Connect</button><!-- </span> -->
-                                <!-- </div> -->
-                            <!-- </form> -->
+                      <button type="submit" style="border: 1px solid white;margin-right: 0px;" class="btn btn-primary">Connect</button>
                     </div>
             </div> 
         </div> 
