--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
                         </div>
                         <div class="span-title">
                             <div class="span-title">
-                              <span class="mbr-section-title display-2 text-center pad-r">OUR </span>
-                              <span class="mbr-section-title display-2 element typedextHeader15-d" adress="typedextHeader15-d" firstel="EVENT" secondel="PRODUCT LAUNCH" thirdel="NEW APP" typespeed="60"></span><br>
-                              <span class="mbr-section-title display-2 text-center pad-r">IS COMING SOON!</span>             
+                              <!-- <span class="mbr-section-title display-2 text-center pad-r">OUR </span>
+                              <span class="mbr-section-title display-2 element typedextHeader15-d" adress="typedextHeader15-d" firstel="EVENT" secondel="PRODUCT LAUNCH" thirdel="NEW APP" typespeed="60"></span><br> -->
+                              <span class="mbr-section-title display-2 text-center pad-r" style="text-transform: uppercase;font-size: 45px">we are currently working on awesome new site</span>             
                             </div>
                         </div>
 
                         <div class="mbr-section-text lead text-center">
-                            <p><span style="font-style: normal;">Please subsribe to stay tuned.</span></p>
+                            <p><span style="font-style: normal;">Event Management I Logistic Management I Artist Management I Celebrity Endorsement <br> Production Resourcing I Public Relation I Corporate Activation I Conceptualizing & Planning</span></p>
+                            <p><span style="font-style: normal;">Mumbai, India.</span></p>
                         </div>
                     </div>
 
