--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <style type="text/css">
+    .modal-backdrop {
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -46,17 +51,34 @@
                     </div>
 
                     <div class="form_wraper" data-form-type="formoid" style="text-align: center;">
-                      <button type="submit" style="border: 1px solid white;margin-right: 0px;" class="btn btn-primary">Connect</button>
+                      <a href="#myModal" data-toggle="modal" style="border: 1px solid white;margin-right: 0px;" class="btn btn-primary">Connect</a>
                     </div>
-            </div> 
-        </div> 
+
+<!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+          <h4 class="modal-title">Warning!</h4>
+        </div>
+        <div class="modal-body">
+          Your current session will expire in 5 minutes. Please Save your changes to continue your session, otherwise you will lose all unsaved data and your session will time out.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal --> 
                      
 </section>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <!-- <script src="assets/tether/tether.min.js"></script> -->
-  <!-- <script src="assets/bootstrap/js/bootstrap.min.js"></script> -->
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <!-- <script src="assets/smooth-scroll/smooth-scroll.js"></script> -->
   <!-- <script src="assets/dropdown/js/script.min.js"></script> -->
   <!-- <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script> -->
