--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                         <div class="mbr-section-text lead text-center">
                             <p><span style="font-style: normal;">Event Management I Logistic Management I Artist Management I Celebrity Endorsement <br> Production Resourcing I Public Relation I Corporate Activation I Conceptualizing & Planning</span></p>
-                            <p><span style="font-style: normal;">India | Overseas</span></p>
+                            <p><span style="font-style: normal;font-weight: 600">India | Overseas</span></p>
                         </div>
                     </div>
 
